linked form to hubspot form

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
       <img src="img/iguslogo.png" />
       <h1>Ready to discover the power of plastic?</h1>
       <h2>We’re packing up and hitting the road to show the country the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? Request the show to come to you!</h2>
-      <form>
-        <input type="text" placeholder="First name" class="two-column" />
-        <input type="text" placeholder="Last name" class="two-column" />
+      <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
+        <input type="text" placeholder="First name" name="firstname" class="two-column" />
+        <input type="text" placeholder="Last name" name="lastname" class="two-column" />
         <br />
-        <input type="text" placeholder="Email address" class="two-column" />
-        <input type="text" placeholder="Company name" class="two-column" />
+        <input type="text" placeholder="Email address" name="email" class="two-column" />
+        <input type="text" placeholder="Company name" name="company" class="two-column" />
         <br />
-        <input type="text" placeholder="Phone number" class="two-column" />
-        <input type="text" placeholder="Preferred date" class="two-column" />
+        <input type="text" placeholder="Phone number" name="phone" class="two-column" />
+        <input type="text" placeholder="Preferred date" name="preferreddate" class="two-column" />
         <br />
-        <input type="text" placeholder="Street address" class="one-column" />
+        <input type="text" placeholder="Street address" name="address" class="one-column" />
         <br />
-        <input type="text" placeholder="City" class="two-column" />
-        <input type="text" placeholder="State" class="two-column" />
+        <input type="text" placeholder="City" name="city" class="two-column" />
+        <input type="text" placeholder="State" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form1" name="opt-in"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
         <br class="opt-in-br form1-br" />
         <input type="submit" class="submit" value="Submit">
       </form>
@@ -134,22 +134,22 @@
     <div class="bottom-form">
       <h3>Interested in the tradeshow coming to you?</h3>
       <p>Let us know! Simply submit your contact information below and we’ll reach out to you to begin organizing the event. We make it easy for you—we create save-the-date flyers to distribute to your company, and will manage planning from start to finish. </p>
-      <form>
-        <input type="text" placeholder="First name" class="two-column" />
-        <input type="text" placeholder="Last name" class="two-column" />
+      <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
+        <input type="text" placeholder="First name" name="firstname" class="two-column" />
+        <input type="text" placeholder="Last name" name="lastname" class="two-column" />
         <br />
-        <input type="text" placeholder="Email address" class="two-column" />
-        <input type="text" placeholder="Company name" class="two-column" />
+        <input type="text" placeholder="Email address" name="email" class="two-column" />
+        <input type="text" placeholder="Company name" name="company" class="two-column" />
         <br />
-        <input type="text" placeholder="Phone number" class="two-column" />
-        <input type="text" placeholder="Preferred date" class="two-column" />
+        <input type="text" placeholder="Phone number" name="phone" class="two-column" />
+        <input type="text" placeholder="Preferred date" name="preferreddate" class="two-column" />
         <br />
-        <input type="text" placeholder="Street address" class="one-column" />
+        <input type="text" placeholder="Street address" name="address" class="one-column" />
         <br />
-        <input type="text" placeholder="City" class="two-column" />
-        <input type="text" placeholder="State" class="two-column" />
+        <input type="text" placeholder="City" name="city" class="two-column" />
+        <input type="text" placeholder="State" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form2" name="opt-in"> <span class="opt-in form2 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <input type="checkbox" class="opt-in form2" value="true" name="RelevantInfo"> <span class="opt-in form2 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
         <br class="opt-in-br form2-br" />
         <input type="submit" class="submit" value="Submit">
       </form>
