changing form on mobile to be a button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="top-left-content">
       <img src="img/iguslogo.png" />
       <h1>Ready to discover the power of plastic?</h1>
-      <h2>We’re packing up and hitting the road to show the country the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? Request the show to come to you!</h2>
+      <h2>We’re packing up and hitting the road to show the country the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? <span class="req-show">Request the show to come to you!</span></h2>
+      <a class="req-stop-mobile">Request a stop at your company</a>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
         <input type="text" placeholder="First name" name="firstname" class="two-column" />
         <input type="text" placeholder="Last name" name="lastname" class="two-column" />
