Adding wistia video

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <img src="img/box_transparent.png" />
     </div>
     <div class="middle-left-content">
-      <img src="img/video_placeholder.png" class="video" />
+      <script src="https://fast.wistia.com/embed/medias/1pxfzkri9d.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_1pxfzkri9d videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/1pxfzkri9d/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
       <div id="circle1" class="float-left"></div>
       <div id="circle2" class="float-left"></div>
     </div>
@@ -57,7 +57,7 @@
     </div>
     <div class="map">
       <h3>We're coming to a city near you!</h3>
-      <center><img src="img/map_placeholder.png" /></center>
+      <center><img src="img/map_lines.png" /></center>
       <p class="trigger">Traveling Tradeshow Stops</p>
       <table class="tour-dates">
         <tbody>
@@ -107,30 +107,38 @@
       <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex<span style="font-size: 10px"><sup>®</sup></span> continuous-flex cables, iglide<span style="font-size: 10px"><sup>®</sup></span> self-lubricating bearings and drylin<span style="font-size: 10px"><sup>®</sup></span> linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> solutions—see why for yourself at a trade show! </p>
     </div>
     <div class="tiles">
-      <div class="e-chain tile float-left">
+      <a href="https://www.igus.com/energychains">
+        <div class="e-chain tile float-left">
         <center><img src="img/echain_tile.png" /></center>
-        <h4>enery chains</h4>
+        <h4>energy chains</h4>
         <p>energy chain cable carriers guide, protect and support cables and hoses while minimizing downtime and extending service life. </p>
         <p class="cta">Learn more</p>
       </div>
+    </a>
+    <a href="https://www.igus.com/wpck/18351/chainflex">
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
         <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable, and built for moving applications. Available in bulk stock with no min. lengths! </p>
         <p class="cta">Learn more</p>
       </div>
+      </a>
+      <a href="https://www.igus.com/wpck/20603/linearsystem">
       <div class="drylin tile float-left">
         <center><img src="img/drylin_tile.png" /></center>
         <h4>drylin linear guides</h4>
         <p>drylin<span style="font-size: 10px"><sup>®</sup></span> plastic bearings linear are self-lubricating, corrosion-resistant and shock-resistant, among other advantages. </p>
         <p class="cta">Learn more</p>
       </div>
+      </a>
+      <a href="https://www.igus.com/wpck/18358/Gleitlager">
       <div class="iglide tile float-left">
         <center><img src="img/iglide_tile.png" /></center>
         <h4>iglide bearings</h4>
         <p>iglide<span style="font-size: 10px"><sup>®</sup></span> plastic bearings are tribologically-optimized and self-lubricating, making them completely maintenance-free. </p>
         <p class="cta">Learn more</p>
       </div>
+      </a>
     </div>
     <div class="bottom-form">
       <h3>Interested in the tradeshow coming to you?</h3>
