--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>igus Traveling Tradeshow</title>
+  <title>igus Traveling Trade Show</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
@@ -51,48 +51,48 @@
       <div id="circle2" class="float-left"></div>
     </div>
     <div class="middle-right-content">
-      <h3>What is the igus traveling tradeshow?</h3>
+      <h3>What is the igus traveling trade show?</h3>
       <p>The traveling trade show is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
       <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
     </div>
     <div class="map">
       <h3>We're coming to a city near you!</h3>
       <center><img src="img/map_lines.png" /></center>
-      <p class="trigger">Traveling Tradeshow Stops</p>
+      <p class="trigger">Traveling Trade Show Stops</p>
       <table class="tour-dates">
         <tbody>
           <tr>
-            <td>7/2 - 7/8: Providence, RI</td>
+            <td>7/9 - 7/13: Upstate NY/PA</td>
             <td class="middle-column"></td>
-            <td>7/2 - 7/8: Detroit, MI</td>
+            <td>9/17 - 9/20: Indiana</td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: New York City, NY</td>
+            <td>7/16 - 7/20: Cleveland, OH</td>
             <td></td>
-            <td>7/2 - 7/8: Frankfurt, KY</td>
+            <td>10/1 - 10/5: Western MI</td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: Pittsburg, PA</td>
+            <td>7/23 - 7/27: Wisconsin </td>
             <td></td>
-            <td>7/2 - 7/8: Houston, TX</td>
+            <td>10/8 - 10/12: Eastern MI</td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: Chicago, IL</td>
+            <td>8/6 - 8/10: Chicago, IL </td>
             <td></td>
-            <td>7/2 - 7/8: Dallas, TX</td>
+            <td>10/15 - 10/19: Kentucky</td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: Minneapolis, MN</td>
+            <td>8/13 - 8/17: Wisconsin </td>
             <td></td>
-            <td>7/2 - 7/8: Phoenix, AZ</td>
+            <td>11/5 - 11/9: Houston, TX</td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: Maddison, WC</td>
+            <td>8/20 - 8/24: Chicago, IL</td>
             <td></td>
-            <td><strong>Fall 2018 - TBD</strong></td>
+            <td><strong>Winter 2018 - TBD</strong></td>
           </tr>
           <tr>
-            <td>7/2 - 7/8: Landsing, MI</td>
+            <td>9/3 - 9/13: Minnesota</td>
             <td></td>
             <td class="cta">Request a stop</td>
           </tr>
@@ -103,7 +103,7 @@
       <img src="img/van.png" />
     </div>
     <div class="tile-intro">
-      <h3>Wondering what we're bringing on the tradeshow?</h3>
+      <h3>Wondering what we're bringing on the trade show?</h3>
       <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex<span style="font-size: 10px"><sup>®</sup></span> continuous-flex cables, iglide<span style="font-size: 10px"><sup>®</sup></span> self-lubricating bearings and drylin<span style="font-size: 10px"><sup>®</sup></span> linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> solutions—see why for yourself at a trade show! </p>
     </div>
     <div class="tiles">
@@ -119,7 +119,7 @@
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
-        <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable, and built for moving applications. Available in bulk stock with no min. lengths! </p>
+        <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable and built for moving applications. Available in bulk stock with no min. lengths! </p>
         <p class="cta">Learn more</p>
       </div>
       </a>
@@ -141,7 +141,7 @@
       </a>
     </div>
     <div class="bottom-form">
-      <h3>Interested in the tradeshow coming to you?</h3>
+      <h3>Interested in the trade show coming to you?</h3>
       <p>Let us know! Simply submit your contact information below and we’ll reach out to you to begin organizing the event. We make it easy for you—we create save-the-date flyers to distribute to your company, and will manage planning from start to finish. </p>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
         <input type="text" placeholder="First name" name="firstname" class="two-column" />
