--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div id="circle2" class="float-left"></div>
     </div>
     <div class="middle-right-content">
-      <h3>What is the igus traveling trade show?</h3>
-      <p>The traveling trade show is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
+      <h3>What is the igus<span style="font-size: 25px"><sup><sup>®</sup></sup></span> traveling trade show?</h3>
+      <p>The traveling tradeshow brings the tradeshow experience to your company and is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
       <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
     </div>
     <div class="map">
@@ -123,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="e-chain tile float-left">
         <center><img src="img/echain_tile.png" /></center>
         <h4>energy chains</h4>
-        <p>energy chain cable carriers guide, protect and support cables and hoses while minimizing downtime and extending service life. </p>
+        <p>e-chain<span style="font-size: 10px"><sup>®</sup></span> cable carriers guide, protect and support cables and hoses while minimizing downtime and extending service life. </p>
         <p class="cta">Learn more</p>
       </div>
     </a>
