Working on mx site

--- a/MX Site/index.html
+++ b/MX Site/index.html
@@ -35,23 +35,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h2>Tenemos todo preparado para recorrer el país y mostrar los beneficios de los rodamientos de polímero igus®, cables flexibles, cadenas porta cable y mucho más. ¿Interesado en ver lo que ofrecemos de primera mano? <span class="req-show">¡Solicite una vista para que lleguemos hasta usted!</span></h2>
       <a class="req-stop-mobile">Request a stop at your company</a>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
-        <input type="text" placeholder="First name" name="firstname" class="two-column" />
-        <input type="text" placeholder="Last name" name="lastname" class="two-column" />
+        <input type="text" placeholder="Nombre" name="firstname" class="two-column" />
+        <input type="text" placeholder="Apellido" name="lastname" class="two-column" />
         <br />
-        <input type="text" placeholder="Email address" name="email" class="two-column" />
-        <input type="text" placeholder="Company name" name="company" class="two-column" />
+        <input type="text" placeholder="Email" name="email" class="two-column" />
+        <input type="text" placeholder="Empresa" name="company" class="two-column" />
         <br />
-        <input type="text" placeholder="Phone number" name="phone" class="two-column" />
-        <input type="text" placeholder="Preferred date" name="preferreddate" class="two-column" />
+        <input type="text" placeholder="Teléfono" name="phone" class="two-column" />
+        <input type="text" placeholder="Fecha de preferencia" name="preferreddate" class="two-column" />
         <br />
-        <input type="text" placeholder="Street address" name="address" class="one-column" />
+        <input type="text" placeholder="Dirección completa" name="address" class="one-column" />
         <br />
-        <input type="text" placeholder="City" name="city" class="two-column" />
-        <input type="text" placeholder="State" name="state" class="two-column" />
+        <input type="text" placeholder="Ciudad" name="city" class="two-column" />
+        <input type="text" placeholder="Estado" name="state" class="two-column" />
         <br />
         <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
         <br class="opt-in-br form1-br" />
-        <input type="submit" class="submit" value="Submit">
+        <input type="submit" class="submit" value="Enviar">
       </form>
     </div>
     <div class="top-right-content">
@@ -68,43 +68,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
     </div>
     <div class="map">
-      <h3>We're coming to a city near you!</h3>
+      <h3>¡Estaremos cerca de tu ciudad!</h3>
       <center><img src="img/mx_map.png" /></center>
       <p class="trigger">Traveling Trade Show Stops</p>
       <table class="tour-dates">
         <tbody>
           <tr>
-            <td>7/9 - 7/13: Upstate NY/PA</td>
+            <td>10/4 - 10/5: Hermosilo/Sonora</td>
             <td class="middle-column"></td>
-            <td>9/17 - 9/20: Indiana</td>
+            <td>11/5 - 11/9: Guadalajara/Jalisco</td>
           </tr>
           <tr>
-            <td>7/16 - 7/20: Cleveland, OH</td>
+            <td>10/7 - 10/13: Tijuana/Baja California</td>
             <td></td>
-            <td>10/1 - 10/5: Western MI</td>
+            <td>11/19 - 11/23: Querétaro</td>
           </tr>
           <tr>
-            <td>7/23 - 7/27: Wisconsin </td>
+            <td>10/14 - 10/19: Chihuahua</td>
             <td></td>
-            <td>10/8 - 10/12: Eastern MI</td>
+            <td>12/3 - 12/4: Puebla</td>
           </tr>
           <tr>
-            <td>8/6 - 8/10: Chicago, IL </td>
-            <td></td>
-            <td>10/15 - 10/19: Kentucky</td>
-          </tr>
-          <tr>
-            <td>8/13 - 8/17: Wisconsin </td>
-            <td></td>
-            <td>11/5 - 11/9: Houston, TX</td>
-          </tr>
-          <tr>
-            <td>8/20 - 8/24: Chicago, IL</td>
-            <td></td>
-            <td><strong>Winter 2018 - TBD</strong></td>
-          </tr>
-          <tr>
-            <td>9/3 - 9/13: Minnesota</td>
+            <td>10/22 - 10/26: San Luis Potosi</td>
             <td></td>
             <td class="cta">Request a stop</td>
           </tr>
@@ -115,8 +100,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <img src="img/van.png" />
     </div>
     <div class="tile-intro">
-      <h3>Wondering what we're bringing on the trade show?</h3>
-      <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex<span style="font-size: 10px"><sup>®</sup></span> continuous-flex cables, iglide<span style="font-size: 10px"><sup>®</sup></span> self-lubricating bearings and drylin<span style="font-size: 10px"><sup>®</sup></span> linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> solutions—see why for yourself at a trade show! </p>
+      <h3>Te preguntas qué traeremos en la feria?</h3>
+      <p>¿Nuestro negocio se centra en cuatro lineas principales de productos: sistemas de cadenas portacables e-chain<span style="font-size: 10px"><sup>®</sup></span>, cables super flexibles chainflex<span style="font-size: 10px"><sup>®</sup></span>, rodamientos de polímero auto-lubricante iglide<span style="font-size: 10px"><sup>®</sup></span> y tecnología lineal drylin<span style="font-size: 10px"><sup>®</sup></span>.  También ofrecemos componentes para robótica, servicios de impresión 3D, materiales de barras sólidas para maquinar y más.  Estos productos se prueban ampliamente en nuestras oficinas centrales en Alemania en el laboratorio de pruebas más grande de la indusria. Más de 200,00 usuarios finales de todo el mundo están cosechando los beneficos de las soluciones igus<span style="font-size: 10px"><sup>®</sup></span>. Compruébalo por ti mismo en nuestros Traveling Trade Shows!</p>
     </div>
     <div class="tiles">
       <a href="https://www.igus.com/energychains">
