--- a/MX Site/index.html
+++ b/MX Site/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="igus Plastic Bearings, Cable Carriers and Cables are touring the country.  Request a traveling tradeshow stop near you!"/>
-  <title>igus Traveling Trade Show</title>
+  <title>Traveling Tradeshow de igus</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
@@ -23,10 +23,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div class="container">
     <div class="nav">
-      <a class="about float-left">About</a>
-      <a class="tour-stops float-left">Tour Stops</a>
-      <a class="products float-left">Products</a>
-      <a class="contact float-left">Contact</a>
+      <a class="about float-left">Información</a>
+      <a class="tour-stops float-left">Ruta del Tour</a>
+      <a class="products float-left">Productos</a>
+      <a class="contact float-left">Contácto</a>
   </a>
     </div>
     <div class="top-left-content">
@@ -49,7 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <input type="text" placeholder="Ciudad" name="city" class="two-column" />
         <input type="text" placeholder="Estado" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Por favor eniarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
         <br class="opt-in-br form1-br" />
         <input type="submit" class="submit" value="Enviar">
       </form>
@@ -138,26 +138,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </a>
     </div>
     <div class="bottom-form">
-      <h3>Interested in the trade show coming to you?</h3>
-      <p>Let us know! Simply submit your contact information below and we’ll reach out to you to begin organizing the event. We make it easy for you—we create save-the-date flyers to distribute to your company, and will manage planning from start to finish. </p>
+      <h3>¿Estás interesado en que organicemos un evento en tu planta o empresa??</h3>
+      <p>¡Comunicante con nosotros! Simplemente envíe su información de contacto a continuación y nos comunicaremos con usted para comenzar a organizar el evento.</p>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
-        <input type="text" placeholder="First name" name="firstname" class="two-column" />
-        <input type="text" placeholder="Last name" name="lastname" class="two-column" />
+        <input type="text" placeholder="Nombre" name="firstname" class="two-column" />
+        <input type="text" placeholder="Apellidos" name="lastname" class="two-column" />
         <br />
-        <input type="text" placeholder="Email address" name="email" class="two-column" />
-        <input type="text" placeholder="Company name" name="company" class="two-column" />
+        <input type="text" placeholder="Correro electrónico" name="email" class="two-column" />
+        <input type="text" placeholder="Empresa" name="company" class="two-column" />
         <br />
-        <input type="text" placeholder="Phone number" name="phone" class="two-column" />
-        <input type="text" placeholder="Preferred date" name="preferreddate" class="two-column" />
+        <input type="text" placeholder="Teléfono" name="phone" class="two-column" />
+        <input type="text" placeholder="Fecha de preferencia para evento" name="preferreddate" class="two-column" />
         <br />
-        <input type="text" placeholder="Street address" name="address" class="one-column" />
+        <input type="text" placeholder="Dirección completa" name="address" class="one-column" />
         <br />
-        <input type="text" placeholder="City" name="city" class="two-column" />
-        <input type="text" placeholder="State" name="state" class="two-column" />
+        <input type="text" placeholder="Ciudad o Municipio" name="city" class="two-column" />
+        <input type="text" placeholder="Estado" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form2" value="true" name="RelevantInfo"> <span class="opt-in form2 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <input type="checkbox" class="opt-in form2" value="true" name="RelevantInfo"> <span class="opt-in form2 form-text">Por favor eniarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
         <br class="opt-in-br form2-br" />
-        <input type="submit" class="submit" value="Submit">
+        <input type="submit" class="submit" value="Enviar">
       </form>
     </div>
   </div>
