--- a/MX Site/index.html
+++ b/MX Site/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="igus Plastic Bearings, Cable Carriers and Cables are touring the country.  Request a traveling tradeshow stop near you!"/>
-  <title>Traveling Tradeshow de igus</title>
+  <title>Traveling Trade Show de igus</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
@@ -63,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div id="circle2" class="float-left"></div>
     </div>
     <div class="middle-right-content">
-      <h3>¿Qué es un Traveling Tradeshow de igus<span style="font-size: 25px"><sup><sup>®</sup></sup></span>?</h3>
+      <h3>¿Qué es un Traveling Trade Show de igus<span style="font-size: 25px"><sup><sup>®</sup></sup></span>?</h3>
       <p>The traveling tradeshow brings the tradeshow experience to your company and is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
       <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
     </div>
@@ -108,7 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="e-chain tile float-left">
         <center><img src="img/echain_tile.png" /></center>
         <h4>Cadenas portacables</h4>
-        <p>Cadenas portacables e-chain protege cables y mangueras a la vez que minimiza el tiempo de inactividad y prolonga la vida útil. </p>
+        <p>Cadenas portacables e-chain<span style="font-size: 10px"><sup>®</sup></span> protege cables y mangueras a la vez que minimiza el tiempo de inactividad y prolonga la vida útil. </p>
         <p class="cta">Learn more</p>
       </div>
     </a>
@@ -116,7 +116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
-        <p>Cables duraderos confiables y están diseñados para aplicanciones en movimiento. ¡Disponible en stock sin longitudes minimas!</p>
+        <p>Cables duraderos confiables y están diseñados para aplicaciones en movimiento y disponible sin longitudes minimas.</p>
         <p class="cta">Learn more</p>
       </div>
       </a>
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="drylin tile float-left">
         <center><img src="img/drylin_tile.png" /></center>
         <h4>Guías lineales drylin</h4>
-        <p>drylin<span style="font-size: 10px"><sup>®</sup></span> rodamientos de polímero linales, son auto lubricantes resistentes a la corrosión y a prueba de golpes, entre otras ventajas</p>
+        <p>drylin<span style="font-size: 10px"><sup>®</sup></span> rodamientos lineales, son auto lubricantes resistentes a la corrosión y a prueba de golpes, entre otras ventajas.</p>
         <p class="cta">Learn more</p>
       </div>
       </a>
@@ -132,13 +132,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="iglide tile float-left">
         <center><img src="img/iglide_tile.png" /></center>
         <h4>Rodamientos de polímero</h4>
-        <p>Los rodamientos de polímero iglide son tribológicamente optimizados, auto lubricantes, lo que los hace completamente libres de manteniento.</p>
+        <p>Los rodamientos de polímero iglide son, auto lubricantes, y completamente libres de manteniento.</p>
         <p class="cta">Learn more</p>
       </div>
       </a>
     </div>
     <div class="bottom-form">
-      <h3>¿Estás interesado en que organicemos un evento en tu planta o empresa??</h3>
+      <h3>¿Estás interesado en que organicemos un evento en tu planta o empresa?</h3>
       <p>¡Comunicante con nosotros! Simplemente envíe su información de contacto a continuación y nos comunicaremos con usted para comenzar a organizar el evento.</p>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
         <input type="text" placeholder="Nombre" name="firstname" class="two-column" />
